# Azura

./: .gitignore
Azura_rust/: Cargo.toml
Azura_rust/src/: error.rs  keywords.rs  lib.rs  main.rs  scanner.rs
Azura_rust/src/error/: format.rs
Azura_rust/src/scanner/: tokens.rs
