[package]
name = "azura_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "azura"

[dependencies]
lending-iterator = "0.1.6"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
phf = { version = "0.11.1", features = ["macros"] }
